.provarCaches/00D6C0000000xA6UAI/objects/redwing__Task_Approver__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>UserRole</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Task__c</fullName>
        <label>Task</label>
        <referenceTo>redwing__Task__c</referenceTo>
        <relationshipLabel>Task Approvers</relationshipLabel>
        <relationshipName>Task_Approvers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task Approver</label>
    <nameField>
        <displayFormat>TAP-{0000000}</displayFormat>
        <label>Task Approver ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>